// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commands createMention throws when invalid config passed into the command 1`] = `
"This is a custom error, possibly thrown by an external library.

Invalid configuration attributes passed to the MentionExtension command.

For more information visit https://remirror.io/docs/errors#rmr0003"
`;

exports[`commands createMention throws when invalid config passed into the command 2`] = `
"This is a custom error, possibly thrown by an external library.

Invalid configuration attributes passed to the MentionExtension command.

For more information visit https://remirror.io/docs/errors#rmr0003"
`;

exports[`commands createMention throws when invalid config passed into the command 3`] = `
"This is a custom error, possibly thrown by an external library.

Invalid configuration attributes passed to the MentionExtension command.

For more information visit https://remirror.io/docs/errors#rmr0003"
`;

exports[`commands createMention throws when invalid config passed into the command 4`] = `
"This is a custom error, possibly thrown by an external library.

Invalid configuration attributes passed to the MentionExtension command.

For more information visit https://remirror.io/docs/errors#rmr0003"
`;

exports[`commands createMention throws when invalid config passed into the command 5`] = `
"An error occurred within an extension. More details should be made available.

The name 'invalid' specified for this command is invalid. Please choose from: [\\"tag\\",\\"at\\",\\"plus\\"].

For more information visit https://remirror.io/docs/errors#rmr0100"
`;

exports[`commands createMention throws when invalid config passed into the command 6`] = `
"An error occurred within an extension. More details should be made available.

The MentionExtension command must specify a name since there are multiple matchers configured

For more information visit https://remirror.io/docs/errors#rmr0100"
`;

exports[`plugin supports deleting content 1`] = `
Prosemirror node: {
  "type": "doc",
  "content": [
    {
      "type": "paragraph"
    }
  ]
}
`;
